[gd_scene load_steps=4 format=3 uid="uid://lhqmb3658cdg"]

[ext_resource type="Script" path="res://scripts/exploding_fire_explosion.gd" id="1_30upr"]
[ext_resource type="Texture2D" uid="uid://dxhjb3fkf1642" path="res://icon.svg" id="2_hbnch"]

[sub_resource type="CircleShape2D" id="CircleShape2D_07ium"]

[node name="ExplodingFireExplosion" type="Area2D"]
script = ExtResource("1_30upr")

[node name="ExplosionShape" type="CollisionShape2D" parent="."]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_07ium")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.35938, 1.35938)
texture = ExtResource("2_hbnch")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
